[gd_scene load_steps=2 format=3 uid="uid://3mxuwlxc4nqy"]

[ext_resource type="Script" uid="uid://cx4u6v11mlmpc" path="res://KeypairDemo.gd" id="1_ts5p3"]

[node name="KeypairDemo" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ts5p3")

[node name="RandomKey" type="Label" parent="."]
layout_mode = 2
text = "Random Keypair (public): "

[node name="SeededKey" type="Label" parent="."]
layout_mode = 2
text = "Seeded Keypair (public): "

[node name="LoadedKey" type="Label" parent="."]
layout_mode = 2
text = "Loaded Keypair (public): "

[node name="Timeout" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timeout" to="." method="_on_timeout_timeout"]
